Corrección del nombre del autor

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <blockquote cite="http://google.com">
                     <h1>autor</h1>
                     <img src="images/autor.jpg" width="150px" height="150px" />
-                    <p><b>Naruto Saiyajin</b></p>
+                    <p><b>Adolfo Betin</b></p>
                 </blockquote>
                 <blockquote cite="http://youtube.com">
                     Anuncio
