--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </header>
             <nav class="menu">
                  <ul>
-                     <li>Principal</li>
-                     <li>Top 10 </li>
-                     <li>Peticiones</li>
+                     <li><a href="index.html">Principal</a></li>
+                     <li><a href="top10.html">Top 10</a> </li>
+                     <li><a href="peticiones.html">Peticiones</a></li>
                  </ul>
             </nav>
             <section class="seccion">
