Agrego estructura principal a las paginas peticiones.html y pedidos.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Peliculas X2D</title>
-        <meta name="descripción" content="Esta es mi primer pagina web"/>
+        <meta name="descripción" content="Pagina web de peliculas"/>
         <meta name="autor" content="Adolfo"/>
         <meta name="keywords" content="comida,productos"/>
         <link rel="stylesheet" href="estilos.css">
