--- a/peticiones.html
+++ b/peticiones.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <title>Peliculas X2D</title>
+        <title>Peliculas ABB</title>
         <meta name="descripción" content="Pagina web de peliculas"/>
         <meta name="autor" content="Adolfo"/>
         <meta name="keywords" content="comida,productos"/>
@@ -12,7 +12,7 @@
         <script src="app.js" charset="utf-8"></script>
         <div class="agrupar">
             <header class="cabezera">
-                <h1>Peliculas X2D</h1>
+                <h1>Peliculas ABB</h1>
             </header>
             <nav class="menu">
                  <ul>
