--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="images/divergente.jfif" />
                     <p>En una sociedad futurista, la gente está dividida entre facciones basadas en sus personalidades. Después de que una joven descubre que ella es una divergente y nunca será de algún grupo, descubre un complot para destruir a quienes son como ella.</p>
                     <br>
-                    <b>Trailer</b>
+                    <h2>Trailer</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/EB4Or5Wg4dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <footer>
                         <p>Comentarios(0)</p>
@@ -50,7 +50,7 @@
                     <img src="images/blade_trinity.jpg" />
                     <p>Blade, perseguido por el FBI, debe unir fuerzas con los cazavampiros para enfrentar a su enemigo más desafiante: Drácula.</p>
                     <br>
-                    <b>Trailer</b>
+                    <h2>Trailer</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/fPcNbsW69Eg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <footer>
                         <p>Comentarios(0)</p>
