mejora de estilos columna enside

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </section>
             <aside class="columna">
                 <blockquote cite="http://google.com">
-                    <h1>autor</h1>
-                    <img src="images/autor.jpg" width="150px" height="150px" />
+                    <h1>Autor</h1>
+                    <img class="foto_autor" src="images/autor.jpg"/>
                     <p><b>Adolfo Betin</b></p>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aliquid reiciendis amet doloribus dignissimos nemo suscipit modi praesentium numquam blanditiis!</p>
