--- a/top10.html
+++ b/top10.html
@@ -6,6 +6,7 @@
         <meta name="descripción" content="Pagina web de peliculas"/>
         <meta name="autor" content="Adolfo"/>
         <meta name="keywords" content="comida,productos"/>
+        <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body class="cuerpo">
