--- a/peticiones.html
+++ b/peticiones.html
@@ -7,7 +7,7 @@
         <meta name="autor" content="Adolfo"/>
         <meta name="keywords" content="comida,productos"/>
         <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="estilos-dist.css">
     </head>
     <body class="cuerpo">
         <script src="app.js" charset="utf-8"></script>
