--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
                     <h2>Trailer</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/EB4Or5Wg4dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <footer>
-                        <p>Comentarios(0)</p>
+                        <form action="index.html" method="#">
+                                <legend>Agrega tu comentario</legend>
+                                <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" ></textarea>
+                                <div class="div_boton_enviar">
+                                    <input type="submit" class="boton_enviar" value="Enviar">
+                                </div>
+                        </form>
                     </footer>
                     <address>
                         <a href="http://mega.io">Enlace de Descarga</a>
@@ -59,7 +65,13 @@
                     <h2>Trailer</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/fPcNbsW69Eg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <footer>
-                        <p>Comentarios(0)</p>
+                        <form action="index.html" method="#">
+                            <legend>Agrega tu comentario</legend>
+                            <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" ></textarea>
+                            <div class="div_boton_enviar">
+                                <input type="submit" class="boton_enviar" value="Enviar">
+                            </div>
+                        </form>
                     </footer>
                     <address>
                         <a href="http://mega.io">Enlace a Descarga</a>
