mejora de estilos de la sección comentarios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <footer>
                         <form action="index.html" method="#">
                                 <legend>Agrega tu comentario</legend>
-                                <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" ></textarea>
+                                <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" placeholder="comentario"></textarea>
                                 <div class="div_boton_enviar">
                                     <input type="submit" class="boton_enviar" value="Enviar">
                                 </div>
@@ -67,7 +67,7 @@
                     <footer>
                         <form action="index.html" method="#">
                             <legend>Agrega tu comentario</legend>
-                            <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" ></textarea>
+                            <textarea name="comentario" rows="5" cols="70" wrap="soft" maxlength="300" placeholder="comentario" ></textarea>
                             <div class="div_boton_enviar">
                                 <input type="submit" class="boton_enviar" value="Enviar">
                             </div>
