Se agregaron estilos al botón de enlace de descarga

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </form>
                     </footer>
                     <address>
-                        <a href="http://mega.io">Enlace de Descarga</a>
+                        <a class="enlace_descarga" href="http://mega.io">Enlace de Descarga</a>
                     </address>
                    
                 </article>
