se agrega la clase de boton de descarga al botón 2

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </form>
                     </footer>
                     <address>
-                        <a href="http://mega.io">Enlace a Descarga</a>
+                        <a class="enlace_descarga" href="http://mega.io">Enlace a Descarga</a>
                     </address>
                 </article>
                 
